--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -7,6 +7,7 @@
 
     <header th:replace="template :: header"></header>
 
+    <div class="registrationContainer">
     <form id="registrationForm" class="login" th:object="${userDto}" onsubmit = "return validateChangedPassword()" method="post" enctype="utf8">
         <h1 class="login-title">Zmiana hasła</h1>
         <input th:field="*{login}" type="text" id="login" autocomplete="off" class="login-input" placeholder="login" th:required="required" autofocus=""/>
@@ -23,8 +24,14 @@
 
         <h3 id="wrongCredentials" th:if="${session.wrongCredentials != null}">Błędny login lub hasło</h3>
 
-    </form>
+        <script>
+            setTimeout(function(){
+                document.getElementById("wrongCredentials").style.display = "none";
+            }, 2500);
+        </script>
 
+    </form>
+    </div>
     <footer th:replace="template :: footer"></footer>
 
     <script th:src="@{/js/changePassword.js}"></script>
