--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,22 +5,20 @@
 
 <body>
 
-    <head th:replace="template :: header"></head>
+    <header th:replace="template :: header"></header>
 
-<main>
+<main class="indexMain">
+    <div class="clr"></div>
     <article class="box">
         <div class="aboutapp">
 
             <h3>O Move Up!</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sodales eros urna, vel commodo felis faucibus sed. Mauris non purus ut velit vestibulum hendrerit. In orci est, elementum commodo ligula lacinia, porta efficitur ligula. Aliquam quis tellus sed nulla rhoncus tincidunt ut lacinia enim. Ut sodales sollicitudin mauris, in consequat mi tincidunt nec.Mauris ut magna nec urna posuere viverra interdum eu justo. Fusce laoreet sagittis mi. Nunc tincidunt vitae ligula non pellentesque.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Nulla sodales eros urna, vel commodo felis faucibus sed. Mauris non purus ut velit vestibulum hendrerit. In orci est, elementum commodo ligula lacinia, porta efficitur ligula. Aliquam quis tellus sed nulla rhoncus tincidunt ut lacinia enim. Ut sodales sollicitudin mauris, in consequat mi tincidunt nec.Mauris ut magna nec urna posuere viverra interdum eu justo. Fusce laoreet sagittis mi. Nunc tincidunt vitae ligula non pellentesque.</p>
 
             <p>Sed non dignissim odio. Aenean posuere erat quis rhoncus congue. Aenean volutpat nulla sem, ut ornare mi suscipit sit amet. Suspendisse vitae accumsan arcu, quis cursus arcu. Nulla cursus congue mattis. Quisque fermentum justo nec scelerisque pharetra. Phasellus consequat nec dolor id commodo.  Nunc tempus nulla sagittis nibh fermentum, laoreet luctus nunc venenatis. Morbi sagittis ligula ac turpis sagittis, nec fermentum nisi suscipit. Pellentesque sit amet mauris metus. Mauris ut magna nec urna posuere viverra interdum eu justo. Fusce laoreet sagittis mi. Nunc tincidunt vitae ligula non pellentesque.  Aliquam et faucibus magna, id placerat enim. Praesent auctor eros sit amet odio maximus vulputate.</p>
 
-        </div>
-
-        <div class="logoPic">
-            <img th:src="@{/img/logo.png}" alt="logo"/>
         </div>
 
     </article>
