--- a/src/main/resources/templates/participate.html
+++ b/src/main/resources/templates/participate.html
@@ -7,7 +7,7 @@
 
 <head th:replace="template :: header"></head>
 
-<main>
+<div class="participateContainer">
 
     <div th:each="event: ${participateEvents}" class="eventDetails">
         <h2 class="eventName" th:text="${event.getName()}"></h2>
@@ -30,7 +30,7 @@
     </div>
 
 
-</main>
+</div>
 
 <footer th:replace="template :: footer"></footer>
 <script th:src="@{/js/dateFormat.js}"></script>
