--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,30 +13,25 @@
 
 <header th:replace="template :: header"></header>
 
+<div class="loginContainer">
+
 <form class="login" id="loginForm" action="/login" method="post">
     <h1 class="login-title">Logowanie</h1>
     <input type="text" autocomplete="off" id="login" class="login-input" name="login" placeholder="login" th:required="required"/>
     <input type="password" autocomplete="off" id="password" class="login-input" name="password" placeholder="hasło" th:required="required"/>
-    <div id="wrongCredentials" th:if="${session.wrongCredentials != null}"><small>Błędny login lub hasło</small></div>
+    <div id="wrongCredentials" th:if="${session.wrongCredentials != null}"><small>Błędny login lub hasło</small>
+    <script>
+        setTimeout(function(){
+                document.getElementById("wrongCredentials").style.display = "none";
+            }, 2500);
+    </script>
+    </div>
     <input class="loginButton" type="submit" value="Zaloguj"></input>
     <p class="login-register"><a th:href="@{/registration}">Nie masz konta?<br/>Zarejestruj się</a></p>
 
 </form>
 
-
-<!--<div id="mapid"></div>-->
-<!--<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>-->
-
-<!--<script>-->
-
-    <!--var mymap = L.map('mapid').setView([51.505, -0.09], 13);-->
-
-    <!--L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {-->
-        <!--attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'-->
-    <!--}).addTo(mymap);-->
-
-
-<!--</script>-->
+</div>
 
 <footer th:replace="template :: footer"></footer>
 
